# hacktrent2025-Echolag

./: .env  .gitignore  QUICKSTART.md  readme.md  start-dev.sh
SFML-2.6.1/install/lib/cmake/SFML/: SFMLSharedTargets.cmake
backend/: .gitignore  package-lock.json  package.json  pyproject.toml  readme.md
backend/src/: app.ts
backend/src/config/: gemini.ts
backend/src/controllers/: analysisController.ts  baristaController.ts
backend/src/echolag/: __init__.py
backend/src/echolag/clients/: elevenlabs_client.py
backend/src/routes/: analysisRoutes.ts  baristaRoutes.ts
backend/src/services/: analysisService.ts  geminiService.ts
backend/src/types/: conversation.ts
barista-sim/: CMakeLists.txt  README.md
barista-sim/src/: App.cpp  App.hpp  Audio.cpp  Audio.hpp  Barista.cpp  Barista.hpp  CafeScene.cpp  CafeScene.hpp  Customer.cpp  Customer.hpp  DialogueUI.cpp  DialogueUI.hpp  Entity.cpp  Entity.hpp  HUD.cpp  HUD.hpp  Input.cpp  Input.hpp  NPC.cpp  NPC.hpp  Order.cpp  Order.hpp  Pathfinding.cpp  Pathfinding.hpp  Player.cpp  Player.hpp  ReportScene.cpp  ReportScene.hpp  Resources.cpp  Resources.hpp  Scene.cpp  Scene.hpp  Timer.hpp  Utils.hpp  main.cpp
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/elevenlabs/text-to-speech/: route.ts
frontend/app/api/elevenlabs/voices/: route.ts
frontend/app/components/: AchievementBadge.tsx  BaristaSimulator.tsx  CTATooltip.tsx  CafeBackground.tsx  Card.tsx  FeedbackSection.tsx  FloatingShapes.tsx  LoadingSpinner.tsx  Masthead.tsx  NavigationBar.tsx  PerformanceScore.tsx  PlayerAvatar.tsx  PrimaryButton.tsx  ProgressChips.tsx  SectionHeading.tsx  SessionMetricsCard.tsx  StickTimerFigure.tsx  TranscriptPanel.tsx
frontend/app/context/: ConversationContext.tsx
frontend/app/customer/: page.tsx
frontend/app/demo/elevenlabs/: page.tsx
frontend/app/elevenlabs/text-to-speech/: route.ts
frontend/app/elevenlabs/voices/: route.ts
frontend/app/feedback/: page.tsx
frontend/app/filler-words/: page.tsx
frontend/app/filler-words/report/: page.tsx
frontend/app/lib/: api.ts  barista-responses.ts  elevenlabs-server.ts  placeholders.ts  routes.ts
frontend/app/lib/demos/: elevenlabs-client.ts
frontend/app/screens/: CustomerSessionScreen.tsx  FeedbackScreen.tsx  FillerWordsScreen.tsx  HomeScreen.tsx  SessionScreen.tsx
frontend/app/services/: geminiAnalysis.ts
frontend/app/types/: conversation.ts
frontend/app/utils/: speechMetrics.ts
frontend/src/app/api/elevenlabs/text-to-speech/: route.ts
frontend/src/app/api/elevenlabs/voices/: route.ts
frontend/src/app/demo/elevenlabs/: page.tsx
frontend/src/app/lib/: placeholders.ts
frontend/src/lib/: elevenlabs-server.ts  env.ts
frontend/src/lib/demos/: elevenlabs-client.ts
scenarios/: 1.json
