[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echolag-backend"
version = "0.1.0"
description = "Backend services for the EchoLag practice platform."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "elevenlabs>=1.12.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]

